--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -70,37 +70,46 @@
   <tr>
   <td>
   {{clrfform.clid}}
+    ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}<br>
   <table border=1>
   <tbody>
     <tr>
     <td>
     {{clrfform.clid}}
-    ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}<br>
-    <a href="file:///{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}">{{ cl.raw_file.filename }}</a><br>
-    <a href="file:///{{MEDIA_ROOT}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" target=foo>{{ cl.raw_file.basename }}.ogv</a>
-    {{ clrfform.sequence.label_tag }}{{ clrfform.sequence }}
-    <a href="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png">{{cl.raw_file.basename}}.png</a></br>
-    <video src ="file:///{{MEDIA_ROOT}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" controls width=200
+      <table border=1>
+      <tbody>
+{# <tr><td> <a href="file:///{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}">{{ cl.raw_file.filename }}</a></td></tr> #}
+{# <tr><td> <a href="file:///{{MEDIA_ROOT}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" target=foo>{{ cl.raw_file.basename }}.ogv</a></td></tr> #}
+<tr><td> {{ clrfform.sequence.label_tag }}{{ clrfform.sequence }}</td></tr>
+<tr><td> <a href="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png">{{cl.raw_file.basename}}.png</a></td></tr>
+<tr><td> <video src ="file:///{{MEDIA_ROOT}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" controls width=200
     poster ="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png" 
     ></video>
-    </td>
+    </td></tr>
+     </tbody>
+     </table>
     <td>
     <table border=1>
     <tbody>
       <tr> <th></th> <th>Raw File</th> <th>Cut List</th> </tr>
-      <tr> <td>Start</td><td>{% if same_dates %}{{cl.raw_file.start|date:"H:i:s"}}{% else %}{{cl.raw_file.start}}{% endif %}</td> <td>{{ clrfform.start }}</td> </tr>
+ 
+      <tr><td></td>
+        <td>{#{ clrfform.trash.label_tag }}{{ clrfform.trash }#}</td>
+        <td>{{ clrfform.apply.label_tag }}{{ clrfform.apply }}
+</td>
+      </tr>
+
+     <tr> <td>Start</td><td>{% if same_dates %}{{cl.raw_file.start|date:"H:i:s"}}{% else %}{{cl.raw_file.start}}{% endif %}</td> <td>{{ clrfform.start }}</td> </tr>
       <tr> <td>Duration:</td> <td>{{cl.raw_file.duration}}</td> </tr>
       <tr> <td>End</td><td> {% if same_dates %}{{cl.raw_file.end|date:"H:i:s"}}{% else %}{{cl.raw_file.end}}{% endif %} </td> <td>{{ clrfform.end }}</td> </tr>
-
-      <tr><td></td>
-        <td>{{ clrfform.trash.label_tag }}{{ clrfform.trash }}</td>
-        <td>{{ clrfform.apply.label_tag }}{{ clrfform.apply }}
-         {{ clrfform.split.label_tag }}{{ clrfform.split }}</td>
-      </tr>
-      <tr> <td>Comments:</td> <td>{{clrfform.rf_comment}}</td> <td>{{clrfform.cl_comment}}</td> </tr>
-      <tr> <td></td> 
+      <tr> <td>Comments:</td> <td>{#{clrfform.rf_comment}#}</td> <td>{{clrfform.cl_comment}}</td> </tr>
+      <tr> <td>
+         {{ clrfform.split.label_tag }}{{ clrfform.split }}
+</td> 
       <td><a href="{% url admin:main_raw_file_change cl.raw_file.id%}">admin</a></td> 
-      <td><a href="{% url admin:main_cut_list_change cl.id%}">admin</a></td> 
+      <td>
+<a href="{% url admin:main_cut_list_change cl.id%}">admin</a> 
+	 </td> 
       </tr>
 
     </tbody>
