--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -1,17 +1,17 @@
 <html>
 <head>
 
-<script type="text/javascript" src="/media/js/urlify.js"></script>
-<script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.js"></script>
-<script type="text/javascript" src="{{MEDIA_URL}}/js/login_form.js"></script>
-<script type="text/javascript" src="{{MEDIA_URL}}/js/fnitize.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}admin/js/urlify.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/login_form.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/fnitize.js"></script>
 
 {% block head %}{% endblock %}
 </head>
 
-<link rel="stylesheet" type="text/css" href="/media/css/base.css" />
-<link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/login_form.css"> 
-<link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/main.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login_form.css"> 
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/main.css" />
 
 <body>
 {% include "accounts/login_form.html" %}
