--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -46,4 +46,29 @@
 
     </table>
 
+  <table>
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>state</th>
+        <th>locked</th>
+        <th>locked by</th>
+        <th>episode.name</th>
+        <th></th>
+      </tr>
+    </thead>
+
+    {% for episode in locked %}
+      <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
+        <td><a href="/admin/main/episode/{{episode.id}}/">{{episode.id}}</a></td>
+        <td>{{episode.state}}</td>
+        <td>{{episode.locked}} - {{episode.locked|timesince}}</td>
+        <td>{{episode.locked_by}}</td>
+
+        <td style="white-space:normal"><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
+      </tr>
+    {% endfor %}
+  </table>
+
+
 {% endblock %}
