fade to red alert

--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -26,7 +26,7 @@
           {% endif %}
           <tr><td> <a href="{% url episode_list client_slug=client.slug show_slug=show.slug start_day=row.0.date|date:"d" %}">{{row.0.date|date:"D d"}}</a></td>
           {% for item in row %}
-             <td>  
+             <td style="background-color:#{{item.alarm_color}};">  
                {% if item.count %}
 
                  <span style="float:left">{{item.start|date:"H:i"}} - {{item.end|date:"H:i"}}</span> <span style="float:right;"> {{item.hours}} h </span> </br>
