--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -15,15 +15,22 @@
 {% endfor %}
 ]
     <table border=1>
-        {% for row  in rows  %}
-          {% if forloop.first %}
            <tr>
          <th> </th>
-            {% for item in row %}
-         <th> <a href="{% url episode_list client_slug=client.slug show_slug=show.slug location_slug=item.loc.slug %}">{{ item.loc.name }}</a> </th>
+            {% for item in locations %}
+<td> <span><b>{{ item.loc.slug }}</b></span></br>
+<span> <a href="{% url episode_list client_slug=client.slug show_slug=show.slug location_slug=item.loc.slug %}"> {{item.count}} </a> </span>
+<span style="float:left">expected:</span><span style="float:right">{{item.talk_gig}} g</span></br>
+                 {% if item.files %}
+                   <span style="float:left">disk: {{item.files}} files</span><span style="float:right">{{item.gig}} g</span></br>
+                   {% if item.alarm >= 0 %} <span style="float:left">{{item.alarm}}%</span><span style="float:right">{{item.variance}} g</span> {% endif %}
+                 {% endif %}
+ 
+</td>
             {% endfor %}
-           </tr>
-          {% endif %}
+         </tr>
+
+        {% for row  in rows  %}
           <tr><td> <a href="{% url episode_list client_slug=client.slug show_slug=show.slug start_day=row.0.date|date:"d" %}">{{row.0.date|date:"D d"}}</a></td>
           {% for item in row %}
              <td style="background-color:#{{item.alarm_color}};">  
