--- a/dj/accounts/templates/accounts/login_form.html
+++ b/dj/accounts/templates/accounts/login_form.html
@@ -1,6 +1,6 @@
 {# "accounts/login_form.html" #}
 
-<script type="text/javascript" language="JavaScript"> 
+<script type="text/javascript" > 
 {% if user.is_authenticated %} var auth_name = '{{user}}';
 {% else %} var auth_name = 0; {% endif %}
 </script>
