--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -1,5 +1,8 @@
 {# main.html #}
 {% extends "base.html" %}
+{% block head %}
+<title>Veyepar - main</title>
+{% endblock %}
 {% block content %}
 <table class=tpick>
 <tr class=row1><td> <a href="{% url clients %}">Clients</a> </td></tr>
